--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: python
 python:
   - 3.7
 
+cache:
+  directories:
+  - $HOME/.cache/pip
+  - $HOME/.pyenv
+
 dist: xenial # https://github.com/travis-ci/travis-ci/issues/9815#issuecomment-401756442
 
 sudo: true
