--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,11 @@ name = "pypi"
 
 [packages]
 
-Flask = "*"
+flask = "*"
+flask-login = "*"
+flask-sqlalchemy = "*"
+flask-whooshee = "*"
+python-dotenv = "*"
 
 
 [dev-packages]
