用户上传图片（flask_wtf、flask_moment、flask_migrate）

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,10 @@ flask-login = "*"
 flask-sqlalchemy = "*"
 flask-whooshee = "*"
 python-dotenv = "*"
+flask-wtf = "*"
+flask-moment = "*"
+flask-migrate = "*"
+pillow = "*"
 
 
 [dev-packages]
