--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,4 +1,7 @@
 [uwsgi]
+# Http access port
+# If this option comes into effect, we can visit our web site on http://[our IP]:[Port]
+# http=:2233
 
 # Uwsgi's ip and port when it is loaded by Nginx
 socket = 127.0.0.1:2233
