nginx 配置文件更新

--- a/project.conf
+++ b/project.conf
@@ -1,11 +1,37 @@
-server {
-    listen 80;
+upstream program {
+        server 127.0.0.1:8000;
+}
 
+# Virtual host, with this option, we can visit our web site on server_name.
+# If the server_name is an ip address and we has configured a DNS,
+# we can also use the corresponding domain name.
+
+server {
+
+    listen              80;
+
+    # domain name or ip address
+    # server_name       project.yuangezhizao.cn;
+
+    charset             utf-8;
+
+    # the web site resources path
     location / {
-        include uwsgi_params;
-        uwsgi_pass 127.0.0.1:8000;
-        uwsgi_param UWSGI_CHDIR /root/project;
-        uwsgi_param UWSGI_SCRIPT run:app;
+        include         uwsgi_params;
+
+        # The inner address whilch point to Uwsgi. all the requests will resend to Uwsgo to resolve.
+        # If we has configured the upstream options, we can fill in the upstream name instead.
+        uwsgi_pass      program;
+
+        # If the following options are already exists in 'Uwsgi.ini'.these options can be ignored.
+        # Configure Uwsgi's running environment path.
+        # uwsgi_param   UWSGI_PYHOME    /root/.local/share/virtualenvs/project-75lbbUUP;
+
+        # Configure the main directory of web site
+        uwsgi_param   UWSGI_CHDIR     /root/project;
+
+        # Configure the Flask Core Object
+        uwsgi_param   UWSGI_SCRIPT    run:app;
     }
 
     location /static/ {
